--- a/src/style.css
+++ b/src/style.css
@@ -174,8 +174,6 @@ section {
 	margin-bottom: 5px;
 }
 
-/* If you don't want the footer to be responsive, remove these media queries */
-
 @media (max-width: 880px) {
 
 	.footer-distributed{
@@ -317,19 +315,107 @@ h1 {
   
 
 .midsec {
-    background: #a73535;
+    display: flex;
+    background: #ffffff;
     color: #000;
     padding: 10em;
     text-align: center;
+    justify-content: space-between;
 }
-.lastsec{
-    background: #1ad4b5;
-    color: #fff;
-    padding: 10em;
-    text-align: center;
+
+.box-1 {
+  width: 30%;
+  margin-bottom: 20px;
+  padding: 20px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  border-radius: 10px;
 }
+
+.box-1 img {
+  width: 80px;
+  margin-bottom: 10px;
+}
+
+.box-1 h3 {
+  margin-bottom: 10px;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.box-1 p {
+  margin-bottom: 10px;
+  font-size: 1rem;
+}
+
+.btn {
+  background-color: #007bff;
+  color: #fff;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #0069d9;
+}
+
+.nw1 {
+  color: #ffa500;
+  font-size: 5rem;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 70px;
+  margin-bottom: 0px;
+}
+
+/* media queries */
+@media only screen and (max-width: 768px) {
+  .midsec {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .box-1 {
+    width: 45%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .box-1 {
+    width: 80%;
+  }
+}
+
+.lastsec {
+  position: relative;
+  color: #ffffff;
+  padding: 7em;
+
+}
+
+.lastsec::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url('/assets/p2.jpg');
+  background-size: cover;
+  background-position: center;
+  filter: brightness(50%);
+  z-index: -1;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .head-p {
-    color: #ffffff;
+  color: #ffffff;
   font-family: Arial, sans-serif;
   font-size: 20px;
   font-weight: normal;
@@ -342,4 +428,15 @@ h1 {
 }
 .ece{
     color:orange;
+}
+
+h2 {
+  font-style: italic;
+  text-align: left;
+  text-transform: uppercase;
+  font-size: 80px;
+}
+
+.desc {
+  font-size: 25px;
 }
