--- a/src/style.css
+++ b/src/style.css
@@ -464,11 +464,77 @@ section {
   background-repeat: no-repeat;
 }
 
-.vision{
-  padding: 10rem;
-  background-color: #ffa500;
+
+
+
+.services{
+  background:linear-gradient(45deg, rgb(227, 117, 27), rgb(150, 144, 238));
+  padding:15px 9%;
+  padding-bottom: 100px;
 }
 
+.services .head{
+  text-align: center;
+  padding-bottom: 15px;
+  color:#fff;
+  text-shadow: 0 5px 10px rgba(0,0,0,.2);
+  font-size: 50px;
+}
+
+.services .box-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+  gap:15px;
+}
+
+.services .box-container .box2{
+  box-shadow: 0 5px 10px rgba(0,0,0,.2);
+  border-radius: 5px;
+  background: #fff;
+  text-align: center;
+  padding:30px 20px;
+}
+
+.services .box-container .box2 img{
+  height: 80px;
+}
+
+.services .box-container .box2 h3{
+  color:#444;
+  font-size: 22px;
+  padding:10px 0;
+}
+
+.services .box-container .box2 p{
+  color:#777;
+  font-size: 15px;
+  line-height: 1.8;
+}
+
+.services .box-container .box2 .btn{
+  margin-top: 10px;
+  display: inline-block;
+  background:#333;
+  color:#fff;
+  font-size: 17px;
+  border-radius: 5px;
+  padding: 8px 25px;
+}
+
+.services .box-container .box2 .btn:hover{
+  letter-spacing: 1px;
+}
+
+.services .box-container .box2:hover{
+  box-shadow: 0 10px 15px rgba(0,0,0,.3);
+  transform: scale(1.03);
+}
+
+@media (max-width:768px){
+  .container{
+      padding:20px;
+  }
+}
 .mission{
   padding: 10rem;
   background-color: #ffa500;
