--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,500,300,700);
 
+<!-- /*for system font design, button, and navbar*/ -->
 * {
   font-family: Open Sans;
 }
@@ -33,8 +34,6 @@ h1 {
     
   }
 
-  
-  
   .nws, .orgs {
     background-color: transparent;
     color: #ffffff;
@@ -100,6 +99,8 @@ h1 {
     margin-right: auto;
   }
   
+  /*header design*/ 
+
   .header {
     position: relative;
     color: #ffffff;
@@ -125,7 +126,7 @@ h1 {
     background-size: cover;
   }
   
-
+/*midsection design*/ 
 .midsec {
     display: flex;
     background: #ffffff;
@@ -200,7 +201,8 @@ h1 {
     width: 80%;
   }
 }
-
+ 
+/*last section design*/ 
 .lastsec {
   position: relative;
   color: #ffffff;
@@ -445,6 +447,7 @@ section {
 
 }
 
+/*about us page design*/ 
 .abouthead{
   position: relative;
   background-image: url('/assets/header.jpg');
@@ -465,10 +468,8 @@ section {
 }
 
 
-
-
 .services{
-  background:linear-gradient(45deg, rgb(227, 117, 27), rgb(150, 144, 238));
+  background:linear-gradient(45deg, rgb(0, 0, 0), rgb(235, 121, 28));
   padding:15px 9%;
   padding-bottom: 100px;
 }
@@ -573,7 +574,7 @@ section {
 
 .slider {
     display: flex;
-    background: #085684;
+    background: #ffffff;
     color: #000;
     padding: 2em;
     text-align: center;
@@ -582,7 +583,7 @@ section {
 
 .nw2 {
   display: flex;
-  background: #085684;
+  background: #000000;
   color: #ffffff;
   padding: 1em;
   text-align: center;
@@ -660,3 +661,5 @@ section {
 	margin: 0 7px 7px 0;
 	padding: 7px;
 }
+
+/*apply page design*/ 
